--- a/404.html
+++ b/404.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/4a320e2c4d.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <title>You've taken a wrong turn...</title>
 </head>
 <body>
-    
+    <!-- 404 Header -->
+    <header>
+        <div>
+
+        </div>
+    </header>
+
+    <!-- 404 Main Content -->
+    <main>
+        <div>
+
+        </div>
+    </main>
+
+    <!-- 404 Footer -->
+    <footer>
+        <div>
+
+        </div>
+    </footer>
 </body>
 </html>
