content added to 404 and styled

--- a/404.html
+++ b/404.html
@@ -11,15 +11,15 @@
 <body>
     <!-- 404 Header -->
     <header>
-        <div>
-
+        <div class="container-fluid error_header">
+            <h1>404</h1>
         </div>
     </header>
 
     <!-- 404 Main Content -->
     <main>
-        <div>
-
+        <div class="container-fluid error_main">
+            
         </div>
     </main>
 
