HTML and CSS completed for index and 404 with game in progress

--- a/404.html
+++ b/404.html
@@ -11,33 +11,43 @@
 <body>
     <!-- 404 Header -->
     <header>
-        <div class="container-fluid error_header">
+        <div class="container-fluid error_header no-gutters">
             <h1>404</h1>
         </div>
     </header>
 
     <!-- 404 Main Content -->
     <main>
-        <div class="container-fluid error_main">
+        <div class="container-fluid error_main no-gutters">
             <div class="row">
-                <div class="col">
-                    
-                  </div>
-                  <div class="col-6">
-                    <p>You've taken a wrong turn!</p>
-                    <button>Return to the game</button>
-                  </div>
-                  <div class="col">
-                    
-                  </div>
+                <div class="col error_content">
+                    <h2>You've taken a wrong turn!</h2>
+                    <button id="back_to_game" type="button" class="btn btn-secondary btn-lg">Return to the game</button>
+                </div>
             </div>
         </div>
     </main>
 
     <!-- 404 Footer -->
     <footer>
-        <div class="container-fluid error_footer">
-
+        <div class="container-fluid no-gutters f1_footer">
+            <ul class="list-inline social_media_links">
+                <li class="list-inline-item">
+                    <a href="https://www.facebook.com/andrew.hendley.9" target="_blank" aria-label="Facebook"><i class="fa-brands fa-facebook" aria-hidden="true"></i>
+                        <span class="sr-only"></span>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="https://www.instagram.com/hendubz84/" target="_blank" aria-label="Instagram"><i class="fa-brands fa-instagram" aria-hidden="true"></i>
+                        <span class="sr-only"></span>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="https://www.linkedin.com/in/andrew-hendley-28baa3202/" target="_blank" aria-label="LinkedIn"><i class="fa-brands fa-linkedin" aria-hidden="true"></i>
+                        <span class="sr-only"></span>
+                    </a>
+                </li>
+            </ul>
         </div>
     </footer>
 </body>
