card content added to game page with CSS styling

--- a/game.html
+++ b/game.html
@@ -25,20 +25,37 @@
             <h2>Player 1 Active Card</h2>
                 <div class="player_current_card">
                     <div class="row no-gutters">
-                        <div class="col">
-                          <img src="assets/images/drivers/norris.png" class="driver_image" alt="...">
+                        <div class="col image_column">
+                          <img src="..." class="driver_image" alt="Player 1's current Driver card image">
                           <br>
-                          <img src="assets/images/team_logos/mclaren.jpg" class="team_image" alt="...">
+                          <img src="..." class="team_image" alt="Player 1's current Team card image">
                         </div>
-                        <div class="col">
-                            <h3 id="driver_name">Lando Norris</h3>
-                            <h4 id="team_name">McLaren</h4>
+                        <div class="col driver_info_column">
+                            <h3 id="driver_name">Driver Name</h3>
+                            <h4 id="team_name">Team Name</h4>
+                                <span>
+                                    <h5>Nationality: </h5> <h5  id="player_nationality_value"> Country</h5>
+                                </span>
+                                <span>
+                                    <h5>Car Number: </h5> <h5 id="player_car_value"> [ 1 ]</h5>
+                                </span>
+                            <hr>                           
                         </div>
                     </div>
                 </div>
               <h2>Computer Active Card</h2>
               <div class="computer_current_card">
-
+                    <div class="row no-gutters">
+                        <div class="col image_column">
+                          <img src="..." class="driver_image" alt="Computers current Driver card image">
+                          <br>
+                          <img src="..." class="team_image" alt="Computers current Team card image">
+                        </div>
+                        <div class="col driver_info_column">
+                            <h3 id="driver_name">Driver Name</h3>
+                            <h4 id="team_name">Team Name</h4>
+                        </div>
+                    </div>
               </div>
         </div>
     </main>
