--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
                 <p>Player 1 chooses from one of 5 stats, Career Podiums, Career Points, Grand Prix Entered, Race Wins and Drivers Championships. The aim is to choose the higher score based on these 5 stats compared to the visible card on the Computers pile, however the Computers stat values are hidden. If you get the answer right, you take that card from the Computer and it is added to the bottom of your pile. If you get it wrong, the Computer gets that card and it is placed at the bottom of their pile.</p>
                 <p>The aim of the game is to obtain all of your opponent’s cards leaving them with 0 cards.</p>
             </div>
-            <div>
-                <button id="play_game" type="button" class="btn btn-success">Play Game</button>
+            <div class="game_link">
+                <form action="game.html">
+                    <button id="play_game" type="submit" class="btn btn-success">Play Game</button>
+                </form>
             </div>
         </div>
     </main>
