--- a/game.html
+++ b/game.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/4a320e2c4d.js" crossorigin="anonymous"></script>
+    <script src="assets/js/script.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <title>Document</title>
 </head>
@@ -35,8 +36,8 @@
                           <img src="..." class="team_image" alt="Player 1's current Team card image">
                         </div>
                         <div class="col driver_info_column">
-                            <h3 id="driver_name">Driver Name</h3>
-                            <h4 id="team_name">Team Name</h4>
+                            <h3 id="driver_name"></h3>
+                            <h4 id="team_name"></h4>
                                 <table>
                                     <tbody>
                                         <tr>
