initial build of JavaScript completed and working

--- a/game.html
+++ b/game.html
@@ -13,11 +13,11 @@
     <header>
         <div class="container-fluid no-gutters game_header">
             <div class="message_box">
-                <h4 id="round_message">#</h4>
+                <h4 id="round_message"></h4>
             </div>
             <div class="scorecard">
-                <h4 id="player_score">#</h4>
-                <h4 id="computer_score">#</h4>
+                <h4 id="player_score"></h4>
+                <h4 id="computer_score"></h4>
             </div>
         </div>
     </header>
