--- a/game.html
+++ b/game.html
@@ -6,18 +6,18 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/4a320e2c4d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-    <title>Three lights, four lights, five lights... it's lights out and away we go!</title>
+    <title>Three lights, four lights, five lights...</title>
 </head>
 <body>
     <!-- Game Header -->
     <header>
         <div class="container-fluid no-gutters game_header">
             <div class="message_box">
-                <h4 id="round_message"></h4>
+                <h4 id="round_message">It's lights out and away we go!</h4>
             </div>
             <div class="scorecard">
-                <h4 id="player_score"></h4>
-                <h4 id="computer_score"></h4>
+                <h4 id="player_score">Player Score: 0</h4>
+                <h4 id="computer_score">Computer Score: 0</h4>
             </div>
         </div>
     </header>
