add HTML for win and lose update CSS and JavaScript to include win and lose

--- a/game.html
+++ b/game.html
@@ -27,7 +27,7 @@
         <div class="play_area">
             
             <h2>Player 1 Active Card</h2>
-                <div class="player_current_card">
+                <div class="current_card">
                     <div class="row no-gutters">
                         <div class="col image_column">
                           <img src="" class="driver_image" id="player_driver_image" alt="Player 1's current Driver card image">
@@ -74,7 +74,7 @@
                     </div>
                 </div>
               <h2>Computer Active Card</h2>
-              <div class="computer_current_card">
+              <div class="current_card">
                     <div class="row no-gutters">
                         <div class="col image_column">
                           <img src="" class="driver_image" id="computer_driver_image" alt="Computers current Driver card image">
