--- a/computer_winner.html
+++ b/computer_winner.html
@@ -6,31 +6,31 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/4a320e2c4d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-    <title>You've taken a wrong turn...</title>
+    <title>You Lost!</title>
 </head>
 <body>
-    <!-- 404 Header -->
+    <!-- Loser Header -->
     <header>
-        <div class="container-fluid error_header no-gutters">
-            <h1>404</h1>
+        <div class="container-fluid loser_header no-gutters">
+            <h1>You Lost!</h1>
         </div>
     </header>
 
-    <!-- 404 Main Content -->
+    <!-- Loser Main Content -->
     <main>
-        <div class="container-fluid error_main no-gutters">
+        <div class="container-fluid loser_main no-gutters">
             <div class="row">
-                <div class="col error_content">
-                    <h2>You've taken a wrong turn!</h2>
+                <div class="col loser_content">
+                    <h2>Better Luck Next Time!</h2>
                     <form action="game.html">
-                        <button id="back_to_game" type="submit" class="btn btn-secondary btn-lg">Return to the game</button>
+                        <button id="play_game" type="submit" class="btn btn-success btn-lg">Play Again</button>
                     </form>
                 </div>
             </div>
         </div>
     </main>
 
-    <!-- 404 Footer -->
+    <!-- Loser Footer -->
     <footer>
         <div class="container-fluid no-gutters f1_footer">
             <ul class="list-inline social_media_links">
