add css to change color of input options background

--- a/game.html
+++ b/game.html
@@ -11,15 +11,6 @@
 <body>
     <!-- Game Header -->
     <header>
-        <div class="container-fluid no-gutters game_header">
-            <div class="message_box">
-                <h4 id="round_message">It's lights out and away we go!</h4>
-            </div>
-            <div class="scorecard">
-                <h4 id="player_score">Player Score: 0</h4>
-                <h4 id="computer_score">Computer Score: 0</h4>
-            </div>
-        </div>
     </header>
 
     <!-- Game Main Content -->
@@ -41,36 +32,47 @@
                                     <tbody>
                                         <tr>
                                             <td>Car Number:</td>
-                                            <td id="players_car_number">#</td>
+                                            <td id="players_car_number" class="center">#</td>
                                         </tr>
                                         <tr>
                                             <td>Nationality:</td>
-                                            <td id="players_driver_nationality">#</td>
+                                            <td id="players_driver_nationality" class="center">#</td>
                                         </tr>
                                         <tr>
                                             <td>Races Entered:</td>
-                                            <td id="player_gp_value">#</td>
+                                            <td id="player_gp_value" class="center option">#</td>
                                         </tr>
                                         <tr>
                                             <td>Career Points:</td>
-                                            <td id="player_points_value">#</td>
+                                            <td id="player_points_value" class="center option">#</td>
                                         </tr>
                                         <tr>
                                             <td>Career Podiums:</td>
-                                            <td id="player_podiums_value">#</td>
+                                            <td id="player_podiums_value" class="center option">#</td>
                                         </tr>
                                         <tr>
                                             <td>Race Wins:</td>
-                                            <td id="player_wins_value">#</td>
+                                            <td id="player_wins_value" class="center option">#</td>
                                         </tr>
                                         <tr>
                                             <td>Drivers Championships:</td>
-                                            <td id="player_champs_value">#</td>
+                                            <td id="player_champs_value" class="center option">#</td>
                                         </tr>
                                     </tbody>
                                 </table>
                             <hr>                           
                         </div>
+                    </div>
+                </div>
+                <div class="container-fluid no-gutters game_header">
+                    <div class="scorecard">
+                        <h4 id="player_score">Player Score: 0</h4>
+                    </div>
+                    <div class="message_box">
+                        <h4 id="round_message">It's lights out and away we go!</h4>
+                    </div>
+                    <div class="scorecard">
+                        <h4 id="computer_score">Computer Score: 0</h4>
                     </div>
                 </div>
               <h2>Computer Active Card</h2>
@@ -88,31 +90,31 @@
                                 <tbody>
                                     <tr>
                                         <td>Car Number:</td>
-                                        <td id="computer_car_number">#</td>
+                                        <td id="computer_car_number" class="center">#</td>
                                     </tr>
                                     <tr>
                                         <td>Nationality:</td>
-                                        <td id="computer_driver_nationality">#</td>
+                                        <td id="computer_driver_nationality" class="center">#</td>
                                     </tr>
                                     <tr>
                                         <td>Races Entered:</td>
-                                        <td id="computer_gp_value">?</td>
+                                        <td id="computer_gp_value" class="center">?</td>
                                     </tr>
                                     <tr>
                                         <td>Career Points:</td>
-                                        <td id="computer_points_value">?</td>
+                                        <td id="computer_points_value" class="center">?</td>
                                     </tr>
                                     <tr>
                                         <td>Career Podiums:</td>
-                                        <td id="computer_podiums_value">?</td>
+                                        <td id="computer_podiums_value" class="center">?</td>
                                     </tr>
                                     <tr>
                                         <td>Race Wins:</td>
-                                        <td id="computer_wins_value">?</td>
+                                        <td id="computer_wins_value" class="center">?</td>
                                     </tr>
                                     <tr>
                                         <td>Drivers Championships:</td>
-                                        <td id="computer_champs_value">?</td>
+                                        <td id="computer_champs_value" class="center">?</td>
                                     </tr>
                                 </tbody>
                             </table>
