--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <h2>Welcome to Formula One Card Battles!</h2>
                 <p>Formula Once Card Battles is a Top Trumps inspired card game based on the 2023 Formula One Drivers and Constructors World Championships. Ten teams of 2 drivers each compete to be the best in the world!</p>
                 <h2>How To Play</h2>
-                <p>To play the game click the 'Play Game' button below. This will take you to the card table where all 20 driver cards are divided at random between two card piles, Player 1 and Computer. The first card in each pack is selected at Random ready to play.</p>
-                <p>Player 1 chooses from one of 5 stats, Career Podiums, Career Points, Grand Prix Entered, Race Wins and Drivers Championships. The aim is to choose the higher score based on these 5 stats compared to the visible card on the Computers pile, however the Computers stat values are hidden. If you get the answer right, you take that card from the Computer and it is added to the bottom of your pile. If you get it wrong, the Computer gets that card and it is placed at the bottom of their pile.</p>
+                <p>To play the game click the 'Play Game' button below. This will take you to the card table where all 20 driver cards are divided at random between two card piles, Player 1 and Computer. The first card in each pack is selected at random ready to play.</p>
+                <p>Player 1 chooses from one of 5 stats, Career Podiums, Career Points, Grand Prix Entered, Race Wins and Drivers Championships won. The aim is to choose the higher score based on these 5 stats compared to the visible card on the Computers pile, however the Computers stat values are hidden. If you get the answer right, you take that card from the Computer and it is added to the bottom of your pile. If you get it wrong, the Computer gets that card and it is placed at the bottom of their pile.</p>
                 <p>The aim of the game is to obtain all of your opponent’s cards leaving them with 0 cards.</p>
             </div>
             <div class="game_link">
