--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/4a320e2c4d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-    <title>Document</title>
+    <title>Welcome to Formula One Card Battles!</title>
 </head>
+
 <body>
     <!-- Index Header -->
     <header>
@@ -21,15 +24,23 @@
         <div class="container-fluid index_content">
             <div class="welcome_message">
                 <h2>Welcome to Formula One Card Battles!</h2>
-                <p>Formula Once Card Battles is a Top Trumps inspired card game based on the 2023 Formula One Drivers and Constructors World Championships. Ten teams of 2 drivers each compete to be the best in the world!</p>
+                <p>Formula Once Card Battles is a Top Trumps inspired card game based on the 2023 Formula One Drivers
+                    and Constructors World Championships. Ten teams of 2 drivers each compete to be the best in the
+                    world!</p>
                 <h2>How To Play</h2>
-                <p>To play the game click the 'Play Game' button below. This will take you to the card table where all 20 driver cards are divided at random between two card piles, Player 1 and Computer. The first card in each pack is selected at random ready to play.</p>
-                <p>Player 1 chooses from one of 5 stats, Career Podiums, Career Points, Grand Prix Entered, Race Wins and Drivers Championships won. The aim is to choose the higher score based on these 5 stats compared to the visible card on the Computers pile, however the Computers stat values are hidden. If you get the answer right, you take that card from the Computer and it is added to the bottom of your pile. If you get it wrong, the Computer gets that card and it is placed at the bottom of their pile.</p>
+                <p>To play the game click the 'Play Game' button below. This will take you to the card table where all
+                    20 driver cards are divided at random between two card piles, you the player and your opponent, the
+                    computer. The first card in each pack is selected at random ready to play.</p>
+                <p>Player 1 chooses from one of 5 stats, Career Podiums, Career Points, Grand Prix Entered, Race Wins
+                    and Drivers Championships won. The aim is to choose the higher score based on these 5 stats compared
+                    to the visible card on the Computers pile, however the Computers stat values are hidden. If you get
+                    the answer right, you take that card from the Computer and it is added to the bottom of your pile.
+                    If you get it wrong, the Computer gets that card and it is placed at the bottom of their pile.</p>
                 <p>The aim of the game is to obtain all of your opponent’s cards leaving them with 0 cards.</p>
             </div>
             <div class="game_link">
                 <form action="game.html">
-                    <button id="play_game" type="submit" class="btn btn-success">Play Game</button>
+                    <button id="play_game" type="submit" class="btn btn-success btn-lg">Play Game</button>
                 </form>
             </div>
         </div>
@@ -40,17 +51,20 @@
         <div>
             <ul class="list-inline social_media_links">
                 <li class="list-inline-item">
-                    <a href="https://www.facebook.com/andrew.hendley.9" target="_blank" aria-label="Facebook"><i class="fa-brands fa-facebook" aria-hidden="true"></i>
+                    <a href="https://www.facebook.com/andrew.hendley.9" target="_blank" aria-label="Facebook"><i
+                            class="fa-brands fa-facebook" aria-hidden="true"></i>
                         <span class="sr-only"></span>
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a href="https://www.instagram.com/hendubz84/" target="_blank" aria-label="Instagram"><i class="fa-brands fa-instagram" aria-hidden="true"></i>
+                    <a href="https://www.instagram.com/hendubz84/" target="_blank" aria-label="Instagram"><i
+                            class="fa-brands fa-instagram" aria-hidden="true"></i>
                         <span class="sr-only"></span>
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a href="https://www.linkedin.com/in/andrew-hendley-28baa3202/" target="_blank" aria-label="LinkedIn"><i class="fa-brands fa-linkedin" aria-hidden="true"></i>
+                    <a href="https://www.linkedin.com/in/andrew-hendley-28baa3202/" target="_blank"
+                        aria-label="LinkedIn"><i class="fa-brands fa-linkedin" aria-hidden="true"></i>
                         <span class="sr-only"></span>
                     </a>
                 </li>
@@ -58,4 +72,5 @@
         </div>
     </footer>
 </body>
+
 </html>
