Update CSS and HTML for display on large devices. Build complete prior to testing

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         <div class="container-fluid index_content">
             <div class="welcome_message">
                 <h2>Welcome to Formula One Card Battles!</h2>
-                <p>Formula Once Card Battles is a Top Trumps inspired card game based on the 2023 Formula One Drivers
+                <p>Formula One Card Battles is a Top Trumps inspired card game based on the 2023 Formula One Drivers
                     and Constructors World Championships. Ten teams of 2 drivers each compete to be the best in the
                     world!</p>
                 <h2>How To Play</h2>
                 <p>To play the game click the 'Play Game' button below. This will take you to the card table where all
-                    20 driver cards are divided at random between two card piles, you the player and your opponent, the
+                    20 driver cards are divided at random between two card piles, you the player and your opponent the
                     computer. The first card in each pack is selected at random ready to play.</p>
-                <p>Player 1 chooses from one of 5 stats, Career Podiums, Career Points, Grand Prix Entered, Race Wins
+                <p>Player 1 chooses from one of 5 stats; Career Podiums, Career Points, Grand Prix Entered, Race Wins
                     and Drivers Championships won. The aim is to choose the higher score based on these 5 stats compared
                     to the visible card on the Computers pile, however the Computers stat values are hidden. If you get
                     the answer right, you take that card from the Computer and it is added to the bottom of your pile.
