--- a/game.html
+++ b/game.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/4a320e2c4d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <title>Three lights, four lights, five lights...</title>
 </head>
+
 <body>
     <!-- Game Header -->
     <header>
@@ -16,53 +19,63 @@
     <!-- Game Main Content -->
     <main>
         <div class="play_area">
-            <h2>Player Active Card</h2>
+            <div class="player_card">
+                <h2>Player Active Card</h2>
                 <div class="current_card">
                     <div class="row no-gutters">
                         <div class="col image_column">
-                          <img src="" class="driver_image" id="player_driver_image" alt="Player 1's current Driver card image">
-                          <br>
-                          <img src="" class="team_image" id="player_team_image" alt="Player 1's current Team card image">
+                            <img src="" class="driver_image" id="player_driver_image"
+                                alt="Player 1's current Driver card image">
+                            <br>
+                            <img src="" class="team_image" id="player_team_image"
+                                alt="Player 1's current Team card image">
                         </div>
                         <div class="col driver_info_column">
                             <h3 id="player_driver_name">Driver Name</h3>
                             <h4 id="player_team_name">Team Name</h4>
-                                <table>
-                                    <tbody>
-                                        <tr>
-                                            <td>Car Number:</td>
-                                            <td id="players_car_number" class="center">#</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Nationality:</td>
-                                            <td id="players_driver_nationality" class="center">#</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Races Entered:</td>
-                                            <td id="player_gp_value" class="center option" onmousemove="changePointer()">#</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Career Points:</td>
-                                            <td id="player_points_value" class="center option" onmousemove="changePointer()">#</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Career Podiums:</td>
-                                            <td id="player_podiums_value" class="center option" onmousemove="changePointer()">#</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Race Wins:</td>
-                                            <td id="player_wins_value" class="center option" onmousemove="changePointer()">#</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Drivers Championships:</td>
-                                            <td id="player_champs_value" class="center option" onmousemove="changePointer()">#</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            <hr>                           
+                            <table>
+                                <tbody>
+                                    <tr>
+                                        <td>Car Number:</td>
+                                        <td id="players_car_number" class="center">#</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Nationality:</td>
+                                        <td id="players_driver_nationality" class="center">#</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Races Entered:</td>
+                                        <td id="player_gp_value" class="center option" onmousemove="changePointer()">#
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Career Points:</td>
+                                        <td id="player_points_value" class="center option"
+                                            onmousemove="changePointer()">#</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Career Podiums:</td>
+                                        <td id="player_podiums_value" class="center option"
+                                            onmousemove="changePointer()">#</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Race Wins:</td>
+                                        <td id="player_wins_value" class="center option" onmousemove="changePointer()">#
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Drivers Championships:</td>
+                                        <td id="player_champs_value" class="center option"
+                                            onmousemove="changePointer()">#</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <hr>
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="game_information">
                 <div class="container-fluid no-gutters game_header">
                     <div class="scorecard">
                         <h4 id="player_score">Player Cards Remaining: 10</h4>
@@ -74,13 +87,17 @@
                         <h4 id="computer_score">Computer Cards Remaining: 10</h4>
                     </div>
                 </div>
-              <h2>Computer Active Card</h2>
-              <div class="current_card">
+            </div>
+            <div class="computer_card">
+                <h2>Computer Active Card</h2>
+                <div class="current_card">
                     <div class="row no-gutters">
                         <div class="col image_column">
-                          <img src="" class="driver_image" id="computer_driver_image" alt="Computers current Driver card image">
-                          <br>
-                          <img src="" class="team_image" id="computer_team_image" alt="Computers current Team card image">
+                            <img src="" class="driver_image" id="computer_driver_image"
+                                alt="Computers current Driver card image">
+                            <br>
+                            <img src="" class="team_image" id="computer_team_image"
+                                alt="Computers current Team card image">
                         </div>
                         <div class="col driver_info_column">
                             <h3 id="computer_driver_name">Driver Name</h3>
@@ -119,7 +136,8 @@
                             </table>
                         </div>
                     </div>
-              </div>
+                </div>
+            </div>
         </div>
     </main>
 
@@ -128,17 +146,20 @@
         <div>
             <ul class="list-inline social_media_links">
                 <li class="list-inline-item">
-                    <a href="https://www.facebook.com/andrew.hendley.9" target="_blank" aria-label="Facebook"><i class="fa-brands fa-facebook" aria-hidden="true"></i>
+                    <a href="https://www.facebook.com/andrew.hendley.9" target="_blank" aria-label="Facebook"><i
+                            class="fa-brands fa-facebook" aria-hidden="true"></i>
                         <span class="sr-only"></span>
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a href="https://www.instagram.com/hendubz84/" target="_blank" aria-label="Instagram"><i class="fa-brands fa-instagram" aria-hidden="true"></i>
+                    <a href="https://www.instagram.com/hendubz84/" target="_blank" aria-label="Instagram"><i
+                            class="fa-brands fa-instagram" aria-hidden="true"></i>
                         <span class="sr-only"></span>
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a href="https://www.linkedin.com/in/andrew-hendley-28baa3202/" target="_blank" aria-label="LinkedIn"><i class="fa-brands fa-linkedin" aria-hidden="true"></i>
+                    <a href="https://www.linkedin.com/in/andrew-hendley-28baa3202/" target="_blank"
+                        aria-label="LinkedIn"><i class="fa-brands fa-linkedin" aria-hidden="true"></i>
                         <span class="sr-only"></span>
                     </a>
                 </li>
@@ -147,4 +168,5 @@
     </footer>
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
