Update readme with wireframe descriptions and images

--- a/game.html
+++ b/game.html
@@ -77,13 +77,13 @@
             </div>
             <div class="game_information">
                 <div class="container-fluid no-gutters game_header">
-                    <div class="scorecard">
+                    <div class="scorecard container-fluid">
                         <h4 id="player_score">Player Cards Remaining: 10</h4>
                     </div>
-                    <div class="message_box">
+                    <div class="message_box container-fluid">
                         <h4 id="round_message">It's lights out and away we go!</h4>
                     </div>
-                    <div class="scorecard">
+                    <div class="scorecard container-fluid">
                         <h4 id="computer_score">Computer Cards Remaining: 10</h4>
                     </div>
                 </div>
