Update README with user stories, HTML and CSS validator testing

--- a/game.html
+++ b/game.html
@@ -24,10 +24,10 @@
                 <div class="current_card">
                     <div class="row no-gutters">
                         <div class="col image_column">
-                            <img src="" class="driver_image" id="player_driver_image"
+                            <img src="loading" class="driver_image" id="player_driver_image"
                                 alt="Player 1's current Driver card image">
                             <br>
-                            <img src="" class="team_image" id="player_team_image"
+                            <img src="loading" class="team_image" id="player_team_image"
                                 alt="Player 1's current Team card image">
                         </div>
                         <div class="col driver_info_column">
@@ -93,10 +93,10 @@
                 <div class="current_card">
                     <div class="row no-gutters">
                         <div class="col image_column">
-                            <img src="" class="driver_image" id="computer_driver_image"
+                            <img src="loading" class="driver_image" id="computer_driver_image"
                                 alt="Computers current Driver card image">
                             <br>
-                            <img src="" class="team_image" id="computer_team_image"
+                            <img src="loading" class="team_image" id="computer_team_image"
                                 alt="Computers current Team card image">
                         </div>
                         <div class="col driver_info_column">
